# c-chat-app

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c
src/chat/: chat_api.c  chat_module.h  chat_storage.h  message_api.c  storage_memory.c  storage_sqlite.c
src/chat/tests/: test_chat_api.c  test_message_api.c
src/gui/: gui_module.h  layout.c
